# qiushi

./: .dockerignore  .gitignore  CONSTRUCTION_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  诊断报告.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
docs/: blog.md  prd-frontend-rebuild.md
docs/architecture/: cli_frontend.md
docs/specs/: cli-facelift-v1.1.md
knowledge/: _connections.json
knowledge/confucius/: benevolence.md  governance.md  learning.md  self.md
knowledge/contemporary/: antifragile.md  black-swan.md  courage-to-be-disliked.md  finite-infinite-games.md  flow.md  influence.md  pyramid-principle.md  second-mountain.md  stoicism.md  thinking-fast-slow.md
knowledge/hegel/: aufheben.md  dialectics.md
knowledge/laozi/: humility.md  opposition.md  simplicity.md  wuwei.md
knowledge/maozedong/: anti-eight-legged.md  foolish-old-man.md  protracted-war.md  reform-study.md  serve-people.md  spark-fire.md  strategic-warfare.md
knowledge/marx/: alienation.md  base.md  class.md
knowledge/modern/: camus.md  nietzsche.md  sartre.md
knowledge/sunzi/: adaptability.md  strategy.md  timing.md
prompts/: system.md
scripts/: demo.sh
src/qiushi/: __init__.py  __main__.py  adapter.py  analyzer.py  card.py  cli.py  db.py  (+12 more)
style/: features.json
tests/: test_adapter.py  test_card.py  test_cli_smoke.py  test_config.py  test_dialectic.py  test_engine.py  test_engine_mock.py  test_integration.py  test_llm.py  test_retriever.py  test_style.py  test_writer.py
(+9 files in other folders)
