[project]
name = "qiushi"
version = "0.4.0"
description = "以哲学思辨为框架的 AI 思考伙伴"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "cli", "thinking-partner", "philosophy", "dialectical-materialism"]
authors = [
    { name = "Jiang Haowen" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/jianghaowen/qiushi"
Repository = "https://github.com/jianghaowen/qiushi"

[project.scripts]
qiushi = "qiushi.cli:app"

[project.optional-dependencies]
all = ["litellm>=1.50"]
server = ["fastapi>=0.115", "uvicorn>=0.34"]
web = []
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
